--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <link rel="shortcut icon" href="src/assets/yinyang.ico" type="image/x-icon">
   <link rel="icon" href="src/assets/yinyang.ico" type="image/x-icon">
   <meta charset="utf-8">
-  <meta name="og:site_name" content="Touhou Character Sorting">
-  <meta name="og:description" content="A simple website for sorting Touhou characters in a formatted list.">
+  <meta name="og:site_name" content="MLP Toyline Sorting">
+  <meta name="og:description" content="A simple website for sorting characters from the MLP toyline in a formatted list.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
   <title>Touhou Character Sorting</title>
 
@@ -41,7 +41,7 @@
     <div class="sorter">
         <img src="src/assets/defaultL.jpg" class="left sort image">
 
-        <div class="starting start button">Touhou Project Character Sorter<br><br>Click to Start!</div>
+        <div class="starting start button">MLP Toyline Character Sorter<br><br>Click to Start!</div>
         <div class="starting load button">Load <span></span></div>
 
         <div class="loading button"><div></div><span>Loading...</span></div>
@@ -70,10 +70,9 @@
         
         <br><br>
 
-        <p>Sorter for Touhou characters. Pick your sources, and hit the Start button.</p>
+        <p>Sorter for MLP Toyline characters. Pick your sources, and hit the Start button.</p>
         <p><strong>Certain options have details that you can hover to read.</strong></p>
         <p>Click on the character you like better from the two, or tie them if you like them equally or don't know them.</p>
-        <p>Depending on how many sources you pick, you'll get up to 700+ picks, so set aside a good few cups of tea for this.</p>
 
         <br><br>
 
@@ -87,13 +86,7 @@
 
         <br><br>
 
-        <p>March 29th, 2021 - Added Unconnected Marketeers (trial).</p>
-        <p>October 5th, 2019 - Added filter for nameless characters.</p>
-        <p>October 4th, 2019 - Added Wily Beast and Weakest Creature (full).</p>
-        <p>June 7th, 2019 - Added Violet Detector and Wily Beast and Weakest Creature (trial).</p>
-        <p>February 21st, 2018 - Refactored site. Autosave, shareable URLs, keyboard controls. Unfortunately, this update breaks support for older mobile Safari users. Get a better device or use a desktop.</p>
-        <p>January 7th, 2018 - Added Antinomy of Common Flowers characters.</p>
-        <p>August 11th, 2017 - Added Hidden Star in Four Seasons full version characters.</p>
+        <p>May 3rd, 2021 - Started work on sorter.</p>
     </div>
 </div>
 </body>
