--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
         <br><br>
 
-        <p>Inspired by <a href="http://mainyan.sakura.ne.jp/thsort.html">this site</a>. Thumbnail Art: <a href="http://www.tasofro.net/">alphes</a>, <a href="http://www.pixiv.net/member.php?id=743845">kaoru</a>, <a href="http://www.pixiv.net/member.php?id=4920496">dairi</a>. Splash Art: <a href="http://kahluamilk.la.coocan.jp/illust/2004/056_hyakkiyakou.jpg">toto nemigi</a>.</p>
+        <p>Images come from: <a href="http://mylittlewiki.org/">My Little Wiki</a> and <a href="https://data.mlpmerch.com/">MLP Merch</a>.</p>
 
         <br><br>
 
