--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="og:site_name" content="MLP Toyline Sorting">
   <meta name="og:description" content="A simple website for sorting characters from the MLP toyline in a formatted list.">
   <meta name="og:image" content="https://i.imgur.com/IZzJMk6.jpg">
-  <title>Touhou Character Sorting</title>
+  <title>MLP Character Sorting</title>
 
   <link rel="stylesheet" type="text/css" href="src/css/reset.css">
   <link rel="stylesheet" type="text/css" href="src/css/styles.css">
