--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script src="src/js/data.js"></script>
   <script src="src/js/data/2021-05-03.js"></script>
   <script src="src/js/data/2021-09-01.js"></script>
+  <script src="src/js/data/2022-10-07.js"></script>
 
   <script src="src/js/html2canvas.min.js"></script>
   <script src="src/js/lz-string.min.js"></script>
@@ -81,6 +82,8 @@
         <br><br>
 
         <p>May 3rd, 2021 - Started work on sorter.</p>
+        <p>Sep 1st, 2021 - Updated.</p>
+        <p>Oct 7th, 2022 - Finally updated again after over a year! Now has a few ponies from every gen, though most gens are far from completion.</p>
     </div>
 </div>
 </body>
